Адаптив, html lang ru-Ru, исправил градиент, исправил футер

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,164 +26,196 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 	</head>
 	<body>
-    	<header class="header">
-    		<div class="header__wrapper">
-    			<div class="header__left">
-    				<a href="index.html" class="logo" title="Loftschool - от мыслителя к создателю">
-	    				<span>Loftschool - от мыслителя к создателю</span>
-	    			</a>
-    			</div><div 
-    			class="header__right">
-    				<div class="social">
-	    				<ul class="social__list">
-	    					<li class="social__item"><a class="social__link social-vk" href="https://vk.com/id5920618" title="Вконтакте" target="_blank">Вконтакте</a></li><li 
-	    					class="social__item">
-	    					<a class="social__link social-twitter" href="https://twitter.com/GeekonCreative" title="Twitter" target="_blank">Twitter</a></li><li 
-	    					class="social__item">
-	    					<a class="social__link social-facebook" href="https://www.facebook.com/profile.php?id=1782215726" title="Facebook" target="_blank">Facebook</a></li><li 
-	    					class="social__item">
-	    					<a class="social__link social-github" href="https://github.com/dim2k2006" title="Github" target="_blank">Github</a></li>
+		<div class="page-wrapper">
+	    	<header class="header">
+	    		<div class="header__wrapper">
+	    			<div class="header__left">
+	    				<a href="index.html" class="logo" title="Loftschool - от мыслителя к создателю">
+		    				<span>Loftschool - от мыслителя к создателю</span>
+		    			</a>
+	    			</div><div 
+	    			class="header__right">
+	    				<div class="social">
+		    				<ul class="social__list">
+		    					<li class="social__item"><a class="social__link social-vk" href="https://vk.com/id5920618" title="Вконтакте" target="_blank">Вконтакте</a></li><li 
+		    					class="social__item">
+		    					<a class="social__link social-twitter" href="https://twitter.com/GeekonCreative" title="Twitter" target="_blank">Twitter</a></li><li 
+		    					class="social__item">
+		    					<a class="social__link social-facebook" href="https://www.facebook.com/profile.php?id=1782215726" title="Facebook" target="_blank">Facebook</a></li><li 
+		    					class="social__item">
+		    					<a class="social__link social-github" href="https://github.com/dim2k2006" title="Github" target="_blank">Github</a></li>
+		    				</ul>
+		    			</div>
+		    			<div class="burger">
+		    				<span class="burger__row"></span>
+		    				<span class="burger__row"></span>
+		    				<span class="burger__row"></span>
+		    			</div>
+	    			</div>
+	    		</div>
+	    	</header>
+
+
+
+	    	<main class="main clearfix">
+	    		<aside class="aside">
+	    			<nav class="navigation">
+	    				<ul class="navigation__list">
+	    					<li class="navigation__item"><a class="navigation__link navigation-state-active" href="index.html" title="Обо мне">Обо мне</a></li>
+	    					<li class="navigation__item"><a class="navigation__link" href="portfolio.html" title="Мои работы">Мои работы</a></li>
+	    					<li class="navigation__item"><a class="navigation__link" href="contact.html" title="Связаться со мной">Связаться со мной</a></li>
+	    				</ul>
+	    			</nav>
+
+
+
+	    			<div class="contacts">
+	    				<div class="contacts__title">Контакты</div>
+	    				<ul class="contacts__list">
+	    					<li class="contacts__item"><a class="contacts__link contacts-mail" href="mailto:creativemail@geekon.by" title="creativemail@geekon.by">creativemail@geekon.by</a></li>
+	    					<li class="contacts__item"><a class="contacts__link contacts-phone" href="tel:+375333293522" title="+375333293522">+375333293522</a></li>
+	    					<li class="contacts__item"><a class="contacts__link contacts-skype" href="skype:dim2k_by1?chat" title="dim2k_by1">dim2k_by1</a></li>
 	    				</ul>
 	    			</div>
-    			</div>
-    		</div>
-    	</header>
+	    		</aside>
 
 
 
-    	<main class="main clearfix">
-    		<aside class="aside">
-    			<nav class="navigation">
-    				<ul class="navigation__list">
-    					<li class="navigation__item"><a class="navigation__link navigation-state-active" href="index.html" title="Обо мне">Обо мне</a></li>
-    					<li class="navigation__item"><a class="navigation__link" href="portfolio.html" title="Мои работы">Мои работы</a></li>
-    					<li class="navigation__item"><a class="navigation__link" href="contact.html" title="Связаться со мной">Связаться со мной</a></li>
-    				</ul>
-    			</nav>
-
-
-
-    			<div class="contacts">
-    				<div class="contacts__title">Контакты</div>
-    				<ul class="contacts__list">
-    					<li class="contacts__item"><a class="contacts__link contacts-mail" href="mailto:creativemail@geekon.by" title="creativemail@geekon.by">creativemail@geekon.by</a></li>
-    					<li class="contacts__item"><a class="contacts__link contacts-phone" href="tel:+375333293522" title="+375333293522">+375333293522</a></li>
-    					<li class="contacts__item"><a class="contacts__link contacts-skype" href="skype:dim2k_by1?chat" title="dim2k_by1">dim2k_by1</a></li>
-    				</ul>
-    			</div>
-    		</aside>
-
-
-
-    		<div class="content">
-    			<section class="box">
-    				<h3 class="box__title"><span>Основная информация</span></h3>
-					<div class="box__content">
-						<div class="personal">
-							<div class="personal__photo">
-								<img src="images/author.jpg" alt="Малофеев Дмитрий Сергеевич">
-							</div>
-							<div class="personal__content">
-								<ul class="personal__list">
-									<li class="presonal__item">
-										<div class="personal__title">Меня зовут:</div>
-										<div class="personal__info">Малофеев Дмитрий Сергеевич</div>
-									</li>
-									<li class="presonal__item">
-										<div class="personal__title">Мой возраст:</div>
-										<div class="personal__info">24</div>
-									</li>
-									<li class="presonal__item">
-										<div class="personal__title">Мой город:</div>
-										<div class="personal__info">Минск, Беларусь</div>
-									</li>
-									<li class="presonal__item">
-										<div class="personal__title">Моя специализация:</div>
-										<div class="personal__info">FRONTEND разработчик</div>
-									</li>
-									<li class="presonal__item">
-										<div class="personal__title">Ключевые навыки:</div>
-										<div class="personal__info">
-											<div class="tag">
-												<ul class="tag__list">
-													<li class="tag__item">html</li>
-													<li class="tag__item">css</li>
-													<li class="tag__item">javascript</li>
-													<li class="tag__item">php</li>
-													<li class="tag__item">sql</li>
-													<li class="tag__item">wordpress</li>
-													<li class="tag__item">gulp</li>
-													<li class="tag__item">grunt</li>
-													<li class="tag__item">git</li>
-												</ul>
+	    		<div class="content">
+	    			<section class="box">
+	    				<h3 class="box__title"><span>Основная информация</span></h3>
+						<div class="box__content">
+							<div class="personal">
+								<div class="personal__photo">
+									<img src="images/author.jpg" alt="Малофеев Дмитрий Сергеевич">
+								</div>
+								<div class="personal__content">
+									<ul class="personal__list">
+										<li class="presonal__item">
+											<div class="personal__title">Меня зовут:</div>
+											<div class="personal__info">Малофеев Дмитрий Сергеевич</div>
+										</li>
+										<li class="presonal__item">
+											<div class="personal__title">Мой возраст:</div>
+											<div class="personal__info">24</div>
+										</li>
+										<li class="presonal__item">
+											<div class="personal__title">Мой город:</div>
+											<div class="personal__info">Минск, Беларусь</div>
+										</li>
+										<li class="presonal__item">
+											<div class="personal__title">Моя специализация:</div>
+											<div class="personal__info">FRONTEND разработчик</div>
+										</li>
+										<li class="presonal__item">
+											<div class="personal__title">Ключевые навыки:</div>
+											<div class="personal__info">
+												<div class="tag">
+													<ul class="tag__list">
+														<li class="tag__item">html</li>
+														<li class="tag__item">css</li>
+														<li class="tag__item">javascript</li>
+														<li class="tag__item">php</li>
+														<li class="tag__item">sql</li>
+														<li class="tag__item">wordpress</li>
+														<li class="tag__item">gulp</li>
+														<li class="tag__item">grunt</li>
+														<li class="tag__item">git</li>
+													</ul>
+												</div>
 											</div>
-										</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+	    			</section>
+
+
+
+					<section class="box">
+						<h3 class="box__title"><span>Опыт работы</span></h3>
+						<div class="box__content">
+							<div class="work">
+								<ul class="work__list">
+									<li class="work__item">
+										<span class="work__name">"Geekon Systems"</span>
+										<div class="work__date">Июнь 2014 - Октябрь 2014</div>
+									</li>
+									<li class="work__item">
+										<span class="work__name">"Lepshey Studio"</span>
+										<div class="work__date">Октябрь 2014 - по настоящее время</div>
 									</li>
 								</ul>
 							</div>
 						</div>
-					</div>
-    			</section>
+					</section>
 
 
 
-				<section class="box">
-					<h3 class="box__title"><span>Опыт работы</span></h3>
-					<div class="box__content">
-						<div class="work">
-							<ul class="work__list">
-								<li class="work__item">
-									<span class="work__name">"Geekon Systems"</span>
-									<div class="work__date">Июнь 2014 - Октябрь 2014</div>
-								</li>
-								<li class="work__item">
-									<span class="work__name">"Lepshey Studio"</span>
-									<div class="work__date">Октябрь 2014 - по настоящее время</div>
-								</li>
-							</ul>
+					<section class="box">
+						<h3 class="box__title"><span>Образование</span></h3>
+						<div class="box__content">
+							<div class="education">
+								<ul class="education__list">
+									<li class="education__item">
+										<span class="education__name">Высший государственный колледж связи, Витебский филиал</span>
+										<div class="education__date">2010</div>
+									</li>
+									<li class="education__item">
+										<span class="education__name">Витебский государственный технологический университет, Витебск</span>
+										<div class="education__date">2014</div>
+									</li>
+									<li class="education__item education_courses">
+										<span class="education__name">Курсы ОЦПВТ, FRONT-END DEVELOPER</span>
+										<div class="education__date">Январь 2014 - Май 2014</div>
+									</li>
+									<li class="education__item education_courses">
+										<span class="education__name">Курсы ОЦПВТ, PHP DEVELOPER</span>
+										<div class="education__date">Июнь 2014 - Сентябрь 2014</div>
+									</li>
+									<li class="education__item education_courses">
+										<span class="education__name">Курсы ОЦПВТ, DESIGN AND GRAPHIC</span>
+										<div class="education__date">Сентябрь 2014 - Октябрь 2014</div>
+									</li>
+									<li class="education__item education_courses">
+										<span class="education__name">Курсы Loftschool.ru</span>
+										<div class="education__date">Май 2015 - Июль 2015</div>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
-				</section>
+					</section>
+	    		</div>
+	    	</main>
+
+			
+			
+			<div class="contacts contacts_mob">
+				<div class="contacts__title">Контакты</div>
+				<ul class="contacts__list">
+					<li class="contacts__item"><a class="contacts__link contacts-phone" href="tel:+375333293522" title="+375333293522">+375333293522</a></li><li class="contacts__item"><a class="contacts__link contacts-mail" href="mailto:creativemail@geekon.by" title="creativemail@geekon.by">creativemail@geekon.by</a></li><li 
+					class="contacts__item"><a class="contacts__link contacts-skype" href="skype:dim2k_by1?chat" title="dim2k_by1">dim2k_by1</a></li>
+				</ul>
+			</div>
 
 
 
-				<section class="box">
-					<h3 class="box__title"><span>Образование</span></h3>
-					<div class="box__content">
-						<div class="education">
-							<ul class="education__list">
-								<li class="education__item">
-									<span class="education__name">Высший государственный колледж связи, Витебский филиал</span>
-									<div class="education__date">2010</div>
-								</li>
-								<li class="education__item">
-									<span class="education__name">Витебский государственный технологический университет, Витебск</span>
-									<div class="education__date">2014</div>
-								</li>
-								<li class="education__item education-courses">
-									<span class="education__name">Курсы ОЦПВТ, FRONT-END DEVELOPER</span>
-									<div class="education__date">Январь 2014 - Май 2014</div>
-								</li>
-								<li class="education__item education-courses">
-									<span class="education__name">Курсы ОЦПВТ, PHP DEVELOPER</span>
-									<div class="education__date">Июнь 2014 - Сентябрь 2014</div>
-								</li>
-								<li class="education__item education-courses">
-									<span class="education__name">Курсы ОЦПВТ, DESIGN AND GRAPHIC</span>
-									<div class="education__date">Сентябрь 2014 - Октябрь 2014</div>
-								</li>
-								<li class="education__item education-courses">
-									<span class="education__name">Курсы Loftschool.ru</span>
-									<div class="education__date">Май 2015 - Июль 2015</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</section>
-    		</div>
-    	</main>
+			<div class="social social_mob">
+				<ul class="social__list">
+					<li class="social__item"><a class="social__link social-vk" href="https://vk.com/id5920618" title="Вконтакте" target="_blank">Вконтакте</a></li><li 
+					class="social__item">
+					<a class="social__link social-twitter" href="https://twitter.com/GeekonCreative" title="Twitter" target="_blank">Twitter</a></li><li 
+					class="social__item">
+					<a class="social__link social-facebook" href="https://www.facebook.com/profile.php?id=1782215726" title="Facebook" target="_blank">Facebook</a></li><li 
+					class="social__item">
+					<a class="social__link social-github" href="https://github.com/dim2k2006" title="Github" target="_blank">Github</a></li>
+				</ul>
+			</div>
+		</div>
 
 
+		
     	<footer class="footer">
     		<div class="footer__wrapper">
     			<a class="footer__lock" href="#" title="Вход">Вход</a>
