--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 	    		<div class="header__wrapper">
 	    			<div class="header__left">
 	    				<a href="index.html" class="logo" title="Loftschool - от мыслителя к создателю">
+	    					<img src="images/logo@2x.png" alt="Loftschool - от мыслителя к создателю">
 		    				<span>Loftschool - от мыслителя к создателю</span>
 		    			</a>
 	    			</div><div 
