--- a/app/auth.html
+++ b/app/auth.html
@@ -34,11 +34,11 @@
     					<form action="#" method="#" class="auth-form">
     						<div class="auth-form__row">
 								<label for="name" class="auth-form__label">Логин</label>
-								<input type="text" name="name" id="name" class="auth-form__input" value="">
+								<input type="text" name="name" id="name" class="auth-form__input form__input" value="Введите логин">
     						</div>
 							<div class="auth-form__row">
 								<label for="pass" class="auth-form__label">Пароль</label>
-    							<input type="text" name="pass" id="pass" class="auth-form__input" value="">
+    							<input type="text" name="pass" id="pass" class="auth-form__input form__input" value="Введите пароль">
 							</div>
 							<div class="auth-form__row">
 								<input type="submit" class="auth-form__submit" value="Войти">
