--- a/app/contact.html
+++ b/app/contact.html
@@ -90,16 +90,16 @@
 	    						<div class="contact-form__row">
 	    							<div class="contact-form__col">
 	    								<label for="name" class="contact-form__label">Имя</label>
-	    								<input type="text" name="name" id="name" class="contact-form__input" value="">
+	    								<input type="text" name="name" id="name" class="contact-form__input form__input" value="Как к Вам обращаться">
 	    							</div><div 
 	    							class="contact-form__col">
 	    								<label for="email" class="contact-form__label">Email</label>
-	    								<input type="text" name="email" id="email" class="contact-form__input" value="">
+	    								<input type="text" name="email" id="email" class="contact-form__input form__input" value="Куда мне писать">
 	    							</div>
 	    						</div>
 								<div class="contact-form__row">
 									<label for="msg" class="contact-form__label">Сообщение</label>
-									<textarea name="msg" id="msg" class="contact-form__textarea"></textarea>
+									<textarea name="msg" id="msg" class="contact-form__textarea form__input">Кратко в чем суть</textarea>
 								</div>
 								<div class="contact-form__row">
 									<label for="captcha" class="contact-form__label">Введите код, указанный на картинке</label>
@@ -107,7 +107,7 @@
 
 									</div><div 
 									class="contact-form__col">
-										<input type="text" name="captcha" id="captcha" class="contact-form__input" value="">
+										<input type="text" name="captcha" id="captcha" class="contact-form__input form__input" value="Введите код">
 									</div>
 								</div>
 								<div class="contact-form__row">
