--- a/app/auth.html
+++ b/app/auth.html
@@ -64,6 +64,7 @@
     	<script src="bower_components/jquery/jquery.js"></script>
     	<script src="bower_components/tooltipster/js/jquery.tooltipster.min.js"></script>
     	<!-- endbower -->
+    	<script src="js/modal.js"></script>
     	<!-- endbuild -->
 		<!-- build:js scripts/main.js -->
 		<script src="js/main.js"></script>
