centering auth form vertically

--- a/app/auth.html
+++ b/app/auth.html
@@ -26,7 +26,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 	</head>
 	<body>
-		<div class="page-wrapper">
+		<div class="page-wrapper page-wrapper_auth">
 	    	<main class="main clearfix">
 	    		<div class="auth">
 	    			<h3 class="auth__title">Авторизируйтесь</h3>
