--- a/app/contact.html
+++ b/app/contact.html
@@ -177,6 +177,7 @@
     	<!-- endbuild -->
 		<!-- build:js scripts/main.js -->
 		<script src="js/main.js"></script>
+		<script src="js/validation.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
